--- a/f-cw111.html
+++ b/f-cw111.html
@@ -6,7 +6,7 @@
 </head>
 <P>Earthlink LOGIN
 <body>
-<img src="https://seeklogo.com/images/J/Jamaica_Constabulary_Force-logo-466E87E8EA-seeklogo.com.png">
+<img src="">
 <p>Earthlink LOGIN. PLEASE WAIT... Redirecting...</p>
 </body>
 </html>
